Fix select color on iOS

--- a/components/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/components/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -10,6 +10,7 @@
   font-size: 1rem;
   cursor: pointer;
   background-color: var(--color-white);
+  color: inherit;
   field-sizing: content;
 
   &:focus,
